--- a/force-app/main/default/classes/PITrialBuilder.cls
+++ b/force-app/main/default/classes/PITrialBuilder.cls
@@ -1,5 +1,7 @@
 public class PITrialBuilder extends TrialBuilder {
+    
     private List<Study_Site__c> studySites;
+    
     public PITrialBuilder(String trialId) {
         setTrial(trialId);
         this.studySites = StudySiteService.getStudySiteForPIByTrialId(trialId);
@@ -8,10 +10,17 @@ public class PITrialBuilder extends TrialBuilder {
         this.studyAction = this.getStudyActions();
         this.trialDetail.tabs = this.getStudyTabs();
     }
+    
     public override TrialDetail createTrial() {
         this.trialDetail.isSSAccepted = StudySiteService.STATUS_GROUP_ACCEPTED.contains(studySites[0].Override_PI_Referral_Status__c);
         this.trialDetail.studyBottomBarActions = this.studyAction.studyDetailBottomBarActions;
         this.trialDetail.actions = this.studyAction.actions;
+        trialDetail.resources = ResourceStudyDocumentService.getInstance().init(
+                ResourceService.RESOURCE_RECORD_TYPE_NAME_STUDY_DOCUMENT,
+                null,
+                null,
+                trialDetail.trial.Id)
+                .getResourceWrapperContainer().wrappers;
         //prepare account list
         List<HCP_Enrollment__c> enrollments = HCPEnrollmentService.getEnrollmentsForPIByStudySiteId(studySites[0].Id);
         Set<Id> accountIds = new Set<Id>();
@@ -22,6 +31,7 @@ public class PITrialBuilder extends TrialBuilder {
         }
         return this.trialDetail;
     }
+    
     public override StudyActions getStudyActions() {
         return new StudyActionsPI(studySites[0]);
     }
