Exclude From Referring Fixed.

--- a/force-app/main/default/classes/StudyActionsHCP.cls
+++ b/force-app/main/default/classes/StudyActionsHCP.cls
@@ -72,12 +72,12 @@ public without sharing class StudyActionsHCP extends StudyActions{
                 '',
                 new List<DisableReason>{
                         level2AndLowReason,
-                        tcAcceptanceRequiredReason,
-                        hcpOnHoldReason,
-                        studySiteOnHoldReason,
-                        hcpNotActiveReason,
-                        studySiteNotAcceptedReason,
-                        studyNoLongerEnrollingReason
+                        tcAcceptanceRequiredReason//,
+//                        hcpOnHoldReason,
+//                        studySiteOnHoldReason,
+//                        hcpNotActiveReason,
+//                        studySiteNotAcceptedReason,
+//                        studyNoLongerEnrollingReason
                 }
         ));
 
@@ -87,12 +87,12 @@ public without sharing class StudyActionsHCP extends StudyActions{
                 '',
                 new List<DisableReason>{
                         level2AndLowReason,
-                        tcAcceptanceRequiredReason,
-                        hcpOnHoldReason,
-                        studySiteOnHoldReason,
-                        hcpNotActiveReason,
-                        studySiteNotAcceptedReason,
-                        studyNoLongerEnrollingReason
+                        tcAcceptanceRequiredReason//,
+//                        hcpOnHoldReason,
+//                        studySiteOnHoldReason,
+//                        hcpNotActiveReason,
+//                        studySiteNotAcceptedReason,
+//                        studyNoLongerEnrollingReason
                 }
         ));
 
