Batch classes for Email Notification (854)
Batch classes, test class, labels, email templates, custom metadata

--- a/force-app/main/default/classes/SendEmailToParticipant.cls
+++ b/force-app/main/default/classes/SendEmailToParticipant.cls
@@ -28,6 +28,8 @@ public without sharing class SendEmailToParticipant {
     };
 
     public static final String PATIENT_PLAIN_SUMMARY = 'Patient_Plain_Summary';
+    public static final String PATIENT_LOGIN = 'Patient_Log_In_Template';
+    public static final String PATIENT_CREATED_DATE = 'Patient_CreatedDate_Template';
 
     @InvocableMethod(Label='Send Email To Participant with Delegates')
     public static void sendEmailNotificationWithDelegates(List<Task> tasks) {
@@ -142,6 +144,29 @@ public without sharing class SendEmailToParticipant {
         }
 
         return emailMessages;
+    }
+
+    public static void sendParticipantLoginNotification(List<Contact> contacts, Boolean isOneYear){
+        List<Messaging.SingleEmailMessage> emailMessages = new List<Messaging.SingleEmailMessage>();
+        for(Contact con : contacts) {
+            if(isOneYear){
+                addPatientToEmailListIfAvailable(
+                        emailMessages,
+                        con,
+                        PATIENT_CREATED_DATE,
+                        null
+                );
+            } else{
+                addPatientToEmailListIfAvailable(
+                        emailMessages,
+                        con,
+                        PATIENT_LOGIN,
+                        null
+                );
+            }
+        }
+
+        SendEmailTemplate.sendEmailMessages(emailMessages);
     }
 
     public static void sendPlainSummaryNotifications(List<Contact> contacts) {
