REF-520 Enable the automatic acceptance of the RP by the PI
REF-520 Enable the automatic acceptance of the RP by the PI, who invited him/her to the community.

--- a/force-app/main/default/classes/Action_InviteRPRemote.cls
+++ b/force-app/main/default/classes/Action_InviteRPRemote.cls
@@ -105,6 +105,9 @@ public without sharing class Action_InviteRPRemote {
                         Study_Site__c = studySiteId
                 );
                 insert hcpe;
+
+                hcpe.Status__c = HCPEnrollmentService.HCP_S_ACTIVATED;
+                update hcpe;
             }
         }catch(Exception e){
             throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
