PEH-976(49) - Include users preferred languages in filter logic

--- a/force-app/main/default/classes/TrialSearchHelper.cls
+++ b/force-app/main/default/classes/TrialSearchHelper.cls
@@ -66,13 +66,17 @@ public with sharing class TrialSearchHelper {
             return trialSearchContainer;
         }
         List<Clinical_Trial_Profile__c> ctps = this.getCtps(taId, proxy, isEnrolling, isNotYetEnrolling);
+        List<Clinical_Trial_Profile__c> ctpsLanguageApprove = this.getCtpsLanguageApprove(ctps);
+        if (ctpsLanguageApprove.isEmpty()) {
+            return trialSearchContainer;
+        }
         Set<Id> taIds = new Set<Id>();
-        for (Clinical_Trial_Profile__c ctp : ctps) {
+        for (Clinical_Trial_Profile__c ctp : ctpsLanguageApprove) {
             if (ctp.Therapeutic_Area__c != null) {
                 taIds.add(ctp.Therapeutic_Area__c);
             }
         }
-        List<TrialSearchContainerRemote.TrialTDO> trialTDOS = this.getTrialTDOs(taIds, ctps, proxy);
+        List<TrialSearchContainerRemote.TrialTDO> trialTDOS = this.getTrialTDOs(ctpsLanguageApprove);
         trialSearchContainer.trialTDOs = trialTDOS;
         return trialSearchContainer;
     }
@@ -131,7 +135,33 @@ public with sharing class TrialSearchHelper {
         insert caseContact;
     }
 
-    private List<TrialSearchContainerRemote.TrialTDO> getTrialTDOs(Set<Id> taIds, List<Clinical_Trial_Profile__c> ctps, DatabaseProxy proxy) {
+    private List<Clinical_Trial_Profile__c> getCtpsLanguageApprove(List<Clinical_Trial_Profile__c> ctps) {
+        Contact Contact = CommunityService.getUserContact();
+        List<Clinical_Trial_Profile__c> ctpsLanguageApprove = new List<Clinical_Trial_Profile__c>();
+        for (Clinical_Trial_Profile__c ctp : ctps) {
+            Set<String> languageCods = new Set<String>();
+            if (!ctp.Study_Site_Profiles__r.isEmpty()) {
+                for (Study_Site__c studySite : ctp.Study_Site_Profiles__r) {
+                    if (String.isNotBlank(studySite.Approved_Lng__c)) {
+                        List<String> cods = studySite.Approved_Lng__c.split(';');
+                        languageCods.addAll(cods);
+                    }
+                }
+            }
+            if (!languageCods.isEmpty()) {
+                if (languageCods.contains(Contact.Language__c)) {
+                    ctpsLanguageApprove.add(ctp);
+                } else if (languageCods.contains(Contact.Second_Choice_Language__c)) {
+                    ctpsLanguageApprove.add(ctp);
+                } else if (languageCods.contains(Contact.Third_Choice_Language__c)) {
+                    ctpsLanguageApprove.add(ctp);
+                }
+            }
+        }
+        return ctpsLanguageApprove;
+    }
+
+    private List<TrialSearchContainerRemote.TrialTDO> getTrialTDOs(List<Clinical_Trial_Profile__c> ctps) {
         List<TrialSearchContainerRemote.TrialTDO> trialTDOS = new List<TrialSearchContainerRemote.TrialTDO>();
         for (Clinical_Trial_Profile__c ctp : ctps) {
             TrialSearchContainerRemote.TrialTDO tdo = new TrialSearchContainerRemote.TrialTDO();
@@ -171,7 +201,8 @@ public with sharing class TrialSearchHelper {
                 'Enrollment_Start_Date__c, ' +
                 'Override_Recruitment_Status__c, ' +
                 'Recruitment_Status__c, ' +
-                'NCT_Number__c ' +
+                'NCT_Number__c, ' +
+                '(SELECT Approved_Lng__c FROM Study_Site_Profiles__r) ' +
                 'FROM Clinical_Trial_Profile__c ';
 
         queryCTP += whereClause;
