--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -250,6 +250,9 @@ public without sharing class CommunityService {
                         PI_DelegateAccessLevel__c,
                         userCommunity_ShowTour__c,
                         Last_Session_Id__c,
+                        Language__c,
+                        Second_Choice_Language__c,
+                        Third_Choice_Language__c,
                         MailingLatitude,
                         MailingLongitude,
                         MailingCountry,
